@@ -3,7 +3,7 @@ buildscript {
         springBootVersion = '2.2.5.RELEASE'
     }
     dependencies {
-        classpath 'org.jsonschema2pojo:jsonschema2pojo-gradle-plugin:0.5.1'
+        classpath 'org.jsonschema2pojo:jsonschema2pojo-gradle-plugin:1.0.2'
     }
     dependencies {
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2'
@@ -26,11 +26,12 @@ plugins {
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'se.patrikerdes.use-latest-versions' version '0.2.7'
     id 'org.owasp.dependencycheck' version '5.1.0'
-    id 'com.github.spotbugs' version '1.6.9'
+    id 'com.github.spotbugs' version '4.4.4'
     id 'net.ltgt.apt' version '0.21'
     id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.14'
     id "org.jetbrains.gradle.plugin.idea-ext" version "0.7"
     id "info.solidsoft.pitest" version '1.4.0'
+    id "io.freefair.lombok" version "5.1.0"
 }
 
 apply plugin: 'java'
@@ -54,6 +55,7 @@ apply from: 'liquibase.gradle'
 
 pmd {
     toolVersion = '6.11.0'
+    maxFailures = 3050 // Failures need to be reviewed/fixed before removing this property
 }
 
 dependencyUpdates.resolutionStrategy = {
@@ -99,10 +101,8 @@ repositories {
 ext {
     junitJupiterVersion = '5.5.2'
     junitVintageVersion = '5.5.2'
-    hibernateVersion = '5.2.18.Final'
     powermockVersion = '2.0.0-beta.5'
     reformLogging = '5.1.0'
-    appInsightsVersion = '2.4.1'
     swagger2Version = '3.0.0-SNAPSHOT'
     limits = [
             'instruction': 90,
@@ -112,7 +112,6 @@ ext {
             'method'     : 90,
             'class'      : 98
     ]
-    appInsights = '2.0.1'
     springCloudVersion = 'Hoxton.RELEASE'
 }
 
@@ -129,8 +128,8 @@ bootJar {
 }
 
 // tag::dependencies[]
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 configurations {
     providedRuntime
@@ -151,7 +150,7 @@ checkstyle {
 checkstyleMain.shouldRunAfter(compileJava)
 test.shouldRunAfter(checkstyleTest)
 
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
+tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
     reports {
         xml.enabled = false
         html.enabled = true
@@ -166,28 +165,15 @@ dependencies {
     compile group: 'uk.gov.hmcts.reform', name: 'logging', version: reformLogging
     compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: reformLogging
 
-    // redefining with version 2.4.1 as applicationinsights-agent-2.5.0 has an open issue
-    // https://github.com/glowroot/instrumentation/issues/1
-    compile group: 'com.microsoft.azure', name: 'applicationinsights-logging-logback', version: appInsightsVersion
-    compile group: 'com.microsoft.azure', name: 'applicationinsights-spring-boot-starter', version: appInsightsVersion
-
     compile 'uk.gov.hmcts.reform:properties-volume-spring-boot-starter:0.0.4'
     compile 'uk.gov.hmcts.reform:health-spring-boot-starter:0.0.5'
-    compile 'org.projectlombok:lombok:1.18.4'
     implementation 'org.mapstruct:mapstruct-jdk8:1.3.0.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final', 'org.projectlombok:lombok:1.18.4'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final', 'org.projectlombok:lombok:1.18.4'
 
-//     Needs to explicitly bring in a different hibernate version as in pom.xml
-    compile "org.hibernate:hibernate-core:${hibernateVersion}"
-    compile "org.hibernate:hibernate-entitymanager:${hibernateVersion}"
-
     compile('org.springframework.boot:spring-boot-starter-actuator')
 
-    compile("org.springframework.boot:spring-boot-starter-data-jpa") {
-        exclude group: 'org.hibernate', module: 'hibernate-core'
-        exclude group: 'org.hibernate', module: 'hibernate-entitymanager'
-    }
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '2.0.0.RELEASE'
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc') {
@@ -236,6 +222,8 @@ dependencies {
 
     compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.3.2.RELEASE'
 
+    compile group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.3.2'
+    compile group: 'pl.jalokim.propertiestojson', name: 'java-properties-to-json', version: '5.1.3'
 
 
     // FIXME 0.6 doesn't support jsonb; 0.7 doesn't work on Windows
@@ -257,7 +245,7 @@ dependencies {
     testCompile group:'org.mockito', name: 'mockito-junit-jupiter', version:'2.24.0'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: powermockVersion
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: powermockVersion
-    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.1.0'
+    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.0'
     testCompile group: 'com.xebialabs.restito', name: 'restito', version: '0.9.3'
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile 'pl.allegro.tech:embedded-elasticsearch:2.7.0'
@@ -276,7 +264,7 @@ dependencies {
     }
     compile 'org.jooq:jool-java-8:0.9.14'
 
-    testCompile group: 'uk.gov.hmcts', name: 'befta-fw', version: '3.6.0-RDM-8811'
+    testCompile group: 'uk.gov.hmcts', name: 'befta-fw', version: '4.0.1'
 
 }
 // end::dependencies[]
@@ -299,6 +287,20 @@ dependencyManagement {
          // CVE-2019-10086
         dependencySet(group: 'commons-beanutils', version: '1.9.4') {
             entry 'commons-beanutils'
+        }
+
+        // Required for Embedded ES with Java 11
+        dependency 'org.rauschig:jarchivelib:1.0.0'
+
+        // Remove once BEFTA rest-assured is updated
+        dependencySet(group: 'io.rest-assured', version: '4.3.0') {
+            entry 'json-path'
+            entry 'xml-path'
+        }
+        dependencySet(group: 'org.codehaus.groovy', version: '3.0.2') {
+            entry 'groovy'
+            entry 'groovy-xml'
+            entry 'groovy-json'
         }
     }
 }
@@ -539,14 +541,11 @@ jsonSchema2Pojo {
     // Whether to make the generated types Serializable
     serializable = false
 
-    // Whether to include getters/setters or to omit these accessor methods and create public fields instead.
-    includeAccessors = true
-
     // Whether to include getters or to omit these accessor methods and create public fields instead.
-    includeGetters = false
+    includeGetters = true
 
     // Whether to include setters or to omit these accessor methods and create public fields instead.
-    includeSetters = false
+    includeSetters = true
 
     // Whether to include dynamic getters, setters, and builders or to omit these methods.
     includeDynamicAccessors = false
@@ -565,10 +564,6 @@ jsonSchema2Pojo {
 
     // What type to use instead of string when adding string properties of format "date-time" to Java types
     dateTimeType = "java.time.LocalDateTime"
-}
-
-jacoco {
-    toolVersion = "0.8.0"
 }
 
 sonarqube {
@@ -616,12 +611,12 @@ jacocoTestReport {
     }
 
     afterEvaluate {
-        classDirectories = files(classDirectories.files.collect {
+        classDirectories.setFrom((classDirectories.files.collect {
             fileTree(dir: it, exclude: ['uk/gov/hmcts/ccd/domain/types/sanitiser/document/**',
                                         '**/service/doclink/**',
                                         '**/domain/model/definition/CaseEventFieldComplex**',
                                         '**/domain/model/definition/DisplayContext**'])
-        })
+        }))
     }
 
     doLast {
@@ -675,6 +670,7 @@ jacocoTestReport {
 test {
     environment("AZURE_APPLICATIONINSIGHTS_INSTRUMENTATIONKEY", "some-key")
     generateCucumberReports.enabled = false
+    systemProperty 'java.locale.providers', 'COMPAT'
 
     useJUnitPlatform()
 
@@ -697,6 +693,16 @@ test {
     reports {
         html.enabled = true
     }
+
+    jvmArgs = [
+        '--add-modules', 'java.se',
+        '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
+        '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
+    ]
 }
 
 check.dependsOn jacocoTestReport
@@ -727,7 +733,8 @@ task smoke(type: Test) {
             main = "uk.gov.hmcts.ccd.datastore.befta.DataStoreBeftaMain"
             classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
             args = ['--plugin', "json:${projectDir}/target/cucumber.json", '--tags', '@Smoke', '--glue',
-                    'uk.gov.hmcts.befta.player', 'src/aat/resources/features/F-109']
+                    'uk.gov.hmcts.befta.player', 'src/aat/resources/features']
+            jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
         }
     }
 
@@ -754,8 +761,9 @@ task functional(type: Test) {
         javaexec {
             main = "uk.gov.hmcts.ccd.datastore.befta.DataStoreBeftaMain"
             classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', "json:${projectDir}/target/cucumber.json", '--tags', '@S-942', '--glue', "uk.gov.hmcts.ccd.datastore.befta",
-                    '--glue','uk.gov.hmcts.befta.player', 'src/aat/resources/features/F-109']
+            args = ['--plugin', "json:${projectDir}/target/cucumber.json", '--tags', '(not @Ignore) and (not @elasticsearch)', '--glue', "uk.gov.hmcts.ccd.datastore.befta",
+                    '--glue','uk.gov.hmcts.befta.player', 'src/aat/resources/features']
+            jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
         }
     }
 }
@@ -765,16 +773,6 @@ def timestamp() {
     def date = new Date()
     return date.format('yyyy-MM-dd HH:mm:ss')
 }
-
-//distributions {
-//    main {
-//        contents {
-//            from(file("$projectDir/src/main/resources/AI-Agent.xml")) {
-//                into "lib"
-//            }
-//        }
-//    }
-//}
 
 // for cnp pipeline
 task dependencyCheck(dependsOn: dependencyCheckAnalyze)
@@ -802,9 +800,4 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
 cucumberReports {
     outputDir = file("${projectDir}/target/cucumber")
     reports = files("${projectDir}/target/cucumber.json")
-}
-
-task installDist(overwrite: true) {
-    // This task must be overwritten to do as it's breaking JAR packaging and it's a mandatory step of swagger
-    // documentation publication.
 }
